# tunertui

./: ARCHITECTURE.md  INDEX.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UV_AND_RUFF.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
examples/: demo_notes.py  frequency_detection_test.py
tunertui/: __init__.py  audio.py  cli.py  notes.py  ui.py
