[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunertui"
version = "0.1.0"
description = "A TUI-based instrument tuner using Python and Textual"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "TunerTUI Contributors"}]

dependencies = [
    "textual>=0.30.0",
    "numpy>=1.23.0",
    "sounddevice>=0.4.5",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
tunertui = "tunertui.cli:main"

[tool.setuptools]
packages = ["tunertui"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_unused_ignores = true
